# ida-wii-loaders

./: CMakeLists.txt
dol/: CMakeLists.txt  dol.cpp
loader/: idaloader.h
